# DragonFlyDebian

./: README
bsd-airtools/: fetch
debian/: files  (+5 more)
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/: Implies  Makefile  README  clone.c  configure  configure.in  fstatfs64.c  getdirentries64.c  getfsstat64.c  ifreq.h  lxstat.c  mkexec.c  mmap.c  paths.h  posix_fadvise.c  ptsname.c  readelflib.c  sched_getp.c  sched_gets.c  setdomain.c  stat16conv.c  statvfsconv.c  syscalls.list  telldir.c  uname.c  writev.c  xstat.c  xstat64.c
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/alpha/: Implies  Makefile  fork.S  getmntinfo.c  ldsodefs.h  sysdep.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/alpha/bits/: sigcontext.h  types.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/bits/: in.h  msq.h  sigset.h  uio.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/i386/: Implies  Makefile  getcontext.S  ldsodefs.h  sys_lseek.S  syscall.S  sysdep.S  sysdep.h  vfork.S
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/i386/bits/: mcontext.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/alpha/machine/: alpha_cpu.h  pmap.h  proc.h  reg.h  types.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/dev/aac/: aacvar.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/dev/asr/: sys_info.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/dev/ata/: atapi-cd.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/dev/dec/: mcclockvar.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/dev/em/: if_em_hw.h  if_em_osdep.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/dev/isp/: isp_freebsd.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/dev/usb/: usb.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/dev/vinum/: request.h  vinumvar.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/i386/machine/: globaldata.h  i4b_isppp.h  i4b_trace.h  lock.h  npx.h  pcb.h  pmap.h  proc.h  types.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/isofs/cd9660/: cd9660_node.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/msdosfs/: direntry.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/net/: hostcache.h  if.h  if.h.orig  if_dl.h  if_pppvar.h  if_sppp.h  route.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/netatm/: atm_ioctl.h  atm_sys.h  atm_var.h  atm_vc.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/netinet6/: in6_prefix.h  in6_var.h  nd6.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/netncp/: ncp_lib.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/nfs/: nfsnode.h  nqnfs.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/ntfs/: ntfs_subr.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/posix4/: posix4.h  sched.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/sys/: acl.h  callout.h  devicestat.h  dvdio.h  event.h  kernel.h  lock.h  memrange.h  param.h  pciio.h  proc.h  procfs.h  reboot.h  resourcevar.h  signalvar.h  syslimits.h  sysproto.h  systm.h  timepps.h  user.h  wormio.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/ufs/ffs/: fs.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/import/vm/: vm.h  vm_map.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/orig/sys/: mbuf.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/patches/net/: if.h.diff  if_dl.h.diff
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/patches/netinet/: if_ether.h.diff
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/kernel-include-4.6/patches/sys/: callout.h.diff  dvdio.h.diff  errno.h.diff  memrange.h.diff  pciio.h.diff  syslimits.h.diff
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/sys/: rfork.h  syscall.h  ucontext.h
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/time-64/: README  futimes.c  getitimer.c  getrusage.c
glibc-2.3/sysdeps/unix/bsd/bsd4.4/freebsd/utmp-compat/: utmp-equal.h  utmp_file.c
glibc-kbsd-2.3/sysdeps/unix/bsd/bsd4.4/kfreebsd/: Dist  Implies  Makefile  brk.c  configure.in  creat.c  fstatvfs64.c  getcwd.c  gethostname.c  getpt.c  init-first.c  kernel-features.h  ldconfig.h  lseek.c  ntp_gettime.c  posix_fallocate.c  pread.c  sched_getp.c  semctl.c  statconv.c  statfsconv.c  statvfs.c  statvfs64.c  syscalls.list  sysctlbyname.c  usleep.c
glibc-kbsd-2.3/sysdeps/unix/bsd/bsd4.4/kfreebsd/alpha/: Makefile  brk.S  dl-machine.h  getfsstat64.c  getmntinfo64.c  ieee_get_fp_control.c  regdef.h  rfork.S  sigcontextinfo.h  sysarch.h
glibc-kbsd-2.3/sysdeps/unix/bsd/bsd4.4/kfreebsd/bits/: fcntl.h  in.h  ioctl-types.h  ioctls.h  mman.h  resource.h  sem.h  signum.h  statvfs.h
glibc-kbsd-2.3/sysdeps/unix/bsd/bsd4.4/kfreebsd/i386/: Implies  Makefile  Versions  fork.S  setcontext.S  swapcontext.S
glibc-kbsd-2.3/sysdeps/unix/bsd/bsd4.4/kfreebsd/i386/bits/: sigcontext.h  types.h
glibc-kbsd-2.3/sysdeps/unix/bsd/bsd4.4/kfreebsd/netinet/: ip_icmp.h  tcp.h
glibc-kbsd-2.3/sysdeps/unix/bsd/bsd4.4/kfreebsd/sys/: kd.h  mount.h  mtio.h  ttydefaults.h
glibc-kbsd-2.3/sysdeps/unix/bsd/bsd4.4/kfreebsd/time-64/: gettimeofday.c  lutimes.c  nanosleep.c  sched_rr_gi.c  setitimer.c
glibc-kbsd-2.3/sysdeps/unix/bsd/bsd4.4/kfreebsd/utmp-compat/bits/: utmp.h
(+3305 files in other folders)
